# swagger.json
@@ -1289,6 +1289,54 @@
             }
           }
        },
+       "/api/v1/articles/{articleSlug}/comment": {
+        "post": {
+          "tags": [
+            "Articles"
+          ],
+          "summary": "Comment on an article",
+          "produces": [
+            "application/json"
+          ],
+          "parameters": [
+              {
+                "name": "Authorization",
+                "in": "header",
+                "description": "Token",
+                "required": true
+              },
+            {
+              "name": "articleSlug",
+              "in": "path",
+              "description": "A slug of an article",
+              "required": true,
+              "type": "string"
+            },
+            {
+                "in": "body",
+                "name": "body",
+                "required": true,
+                "schema": {
+                    "$ref": "#/definitions/Comment"
+                }
+              }
+          ],
+          "responses": {
+            "201": {
+              "description": "Commented on the article"
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "404": {
+              "description": "Article Not Found"
+            },
+            "401": {
+              "description": "Unauthorized Access"
+            }
+          }
+        }
+      },
        "/api/v1/articles/{id}/rate": {
         "post": {
             "tags": [
@@ -1776,6 +1824,16 @@
         }
 
     }
+},
+"Comment": {
+    "required": [
+        "comment"
+      ],
+      "properties": {
+        "comment": {
+          "type": "string"
+        }
+}
 },
         "Error": {
             "properties": {
